[gd_scene load_steps=28 format=3 uid="uid://cq54e2pepbh0y"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_gkmus"]
[ext_resource type="Texture2D" uid="uid://cch74frjxihh5" path="res://Assets/player/E/player_E_0.png" id="1_rc4uw"]
[ext_resource type="Texture2D" uid="uid://cuqc22yiqcl0w" path="res://Assets/player/E/player_E_1.png" id="2_qrmvq"]
[ext_resource type="Texture2D" uid="uid://d3s1mp8e75usq" path="res://Assets/player/E/player_E_2.png" id="3_0f2mn"]
[ext_resource type="Texture2D" uid="uid://cf4w1c7oy2jg5" path="res://Assets/player/SE/player_SE_0.png" id="5_id20g"]
[ext_resource type="Texture2D" uid="uid://cui1lahvp8wm5" path="res://Assets/player/SE/player_SE_1.png" id="6_joe6e"]
[ext_resource type="Texture2D" uid="uid://c03oalx0gh6h2" path="res://Assets/player/SE/player_SE_2.png" id="7_kbmgr"]
[ext_resource type="Texture2D" uid="uid://b6rss2ai01csr" path="res://Assets/player/S/player_S_0.png" id="8_g1x36"]
[ext_resource type="Texture2D" uid="uid://coudjeiqhwtph" path="res://Assets/player/S/player_S_1.png" id="9_4m6w4"]
[ext_resource type="Texture2D" uid="uid://brsojatr1lk" path="res://Assets/player/S/player_S_2.png" id="10_xbma5"]
[ext_resource type="Texture2D" uid="uid://d4e8oqrpvk3jq" path="res://Assets/player/SW/player_SW_0.png" id="11_rfpmp"]
[ext_resource type="Texture2D" uid="uid://cy1utw80r1umm" path="res://Assets/player/SW/player_SW_1.png" id="12_0kvo3"]
[ext_resource type="Texture2D" uid="uid://dl2vropyrkq2m" path="res://Assets/player/SW/player_SW_2.png" id="13_hcs3t"]
[ext_resource type="Texture2D" uid="uid://b07obyxka7hjn" path="res://Assets/player/W/player_W_0.png" id="14_7s117"]
[ext_resource type="Texture2D" uid="uid://nc3ix8nmocmy" path="res://Assets/player/W/player_W_1.png" id="15_bo1ls"]
[ext_resource type="Texture2D" uid="uid://r1awvy0esbxc" path="res://Assets/player/W/player_W_2.png" id="16_1mst1"]
[ext_resource type="Texture2D" uid="uid://c4q7ndqhw43vn" path="res://Assets/player/NW/player_NW_0.png" id="17_ych8w"]
[ext_resource type="Texture2D" uid="uid://crch77y13gjoj" path="res://Assets/player/NW/player_NW_1.png" id="18_v26ic"]
[ext_resource type="Texture2D" uid="uid://c33re5bcmxkt2" path="res://Assets/player/NW/player_NW_2.png" id="19_qna7i"]
[ext_resource type="Texture2D" uid="uid://tukpub11k3k8" path="res://Assets/player/N/player_N_0.png" id="20_qjxck"]
[ext_resource type="Texture2D" uid="uid://bt6cjw2c1cna0" path="res://Assets/player/N/player_N_1.png" id="21_uhypn"]
[ext_resource type="Texture2D" uid="uid://dtqjlj618msbo" path="res://Assets/player/N/player_N_2.png" id="22_1lotm"]
[ext_resource type="Texture2D" uid="uid://cc8njfca4kqub" path="res://Assets/player/NE/player_NE_0.png" id="23_qpvy0"]
[ext_resource type="Texture2D" uid="uid://b31weigfh46eg" path="res://Assets/player/NE/player_NE_1.png" id="24_3mupr"]
[ext_resource type="Texture2D" uid="uid://fb7lhnp8wvnt" path="res://Assets/player/NE/player_NE_2.png" id="25_22u2r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qvxsd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rc4uw")
}, {
"duration": 1.0,
"texture": ExtResource("2_qrmvq")
}, {
"duration": 1.0,
"texture": ExtResource("3_0f2mn")
}, {
"duration": 1.0,
"texture": ExtResource("2_qrmvq")
}],
"loop": true,
"name": &"walk0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_id20g")
}, {
"duration": 1.0,
"texture": ExtResource("6_joe6e")
}, {
"duration": 1.0,
"texture": ExtResource("7_kbmgr")
}, {
"duration": 1.0,
"texture": ExtResource("6_joe6e")
}],
"loop": true,
"name": &"walk1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_g1x36")
}, {
"duration": 1.0,
"texture": ExtResource("9_4m6w4")
}, {
"duration": 1.0,
"texture": ExtResource("10_xbma5")
}, {
"duration": 1.0,
"texture": ExtResource("9_4m6w4")
}],
"loop": true,
"name": &"walk2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_rfpmp")
}, {
"duration": 1.0,
"texture": ExtResource("12_0kvo3")
}, {
"duration": 1.0,
"texture": ExtResource("13_hcs3t")
}, {
"duration": 1.0,
"texture": ExtResource("12_0kvo3")
}],
"loop": true,
"name": &"walk3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_7s117")
}, {
"duration": 1.0,
"texture": ExtResource("15_bo1ls")
}, {
"duration": 1.0,
"texture": ExtResource("16_1mst1")
}, {
"duration": 1.0,
"texture": ExtResource("15_bo1ls")
}],
"loop": true,
"name": &"walk4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_ych8w")
}, {
"duration": 1.0,
"texture": ExtResource("18_v26ic")
}, {
"duration": 1.0,
"texture": ExtResource("19_qna7i")
}, {
"duration": 1.0,
"texture": ExtResource("18_v26ic")
}],
"loop": true,
"name": &"walk5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_qjxck")
}, {
"duration": 1.0,
"texture": ExtResource("21_uhypn")
}, {
"duration": 1.0,
"texture": ExtResource("22_1lotm")
}, {
"duration": 1.0,
"texture": ExtResource("21_uhypn")
}],
"loop": true,
"name": &"walk6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_qpvy0")
}, {
"duration": 1.0,
"texture": ExtResource("24_3mupr")
}, {
"duration": 1.0,
"texture": ExtResource("25_22u2r")
}, {
"duration": 1.0,
"texture": ExtResource("24_3mupr")
}],
"loop": true,
"name": &"walk7",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bp27b"]
size = Vector2(38, 64)

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 17
script = ExtResource("1_gkmus")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.75, 3.75)
sprite_frames = SubResource("SpriteFrames_qvxsd")
animation = &"walk7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_bp27b")

[node name="Timer" type="Timer" parent="."]

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="FastFireTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="FastFireTimer" to="." method="_on_fast_fire_timer_timeout"]
